规范化代码-续